<resources>
    <string name="app_name">管道清淤检测外业调查系统</string>
    <string name="action_settings">系统设置</string>
    <string name="action_about">关于</string>
    <string name="app_nameCN">管道清淤检测外业调查系统</string>
    <string name="action_sumb">提交</string>
    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="username_empty">请输入账号！</string>
    <string name="password_empty">请输入密码！</string>
    <string name="login_success">登录成功</string>
    <string name="project">工程</string>
    <string name="edit">编辑</string>
    <string name="graph_layer">图层</string>
    <string name="picture">照片</string>
    <string name="scale_text">当前比例尺1：%1$s</string>
    <string name="dialog_title">提示</string>
    <string name="no_edit_project">当前没有可编辑的对象，请先打开一个工程</string>
    <string name="confirm">确定</string>
    <string name="project_management">工程管理</string>
    <string name="project_list">工程列表</string>
    <string name="exit">退出</string>
    <string name="open_project_file_fail">打开工程失败</string>
    <string name="close">关闭</string>
    <string name="add_point">添加管点</string>
    <string name="collect_mark">采集标记</string>
    <string name="open_gps">请开启GPS导航...</string>
    <string name="point_property">管点属性</string>
    <string name="cancel">取消</string>
    <string name="report_title">照片上传</string>
    <string name="report_title_format">照片上传——%1$s</string>
    <string name="delete_photo">是否删除照片%1$s?</string>
    <string name="report_no_uploaded_photos">请先拍照或者从相册选择要上传的照片！</string>
    <string name="report_photos_upload_success">照片上传成功！</string>
    <string name="no_permission">请先到设置检查权限</string>
    <string name="choose_points">选择检查井</string>
</resources>
